# fast-verify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fast_verify/: __init__.py
tests/: __init__.py
